hphp/hack/test/typecheck/expression_trees/splice_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(
  ExprTree<Code, Code::TAst, (function(ExampleString): ExampleInt)> $x,
): void {
  $fun_call = Code`(${$x})("baz")`;
}
